--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^1.0.5"
   }
 }
