--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^1.0.5"
+    "@netlify/plugin-nextjs": "^1.0.5",
+    "netlify-plugin-cache-nextjs": "^1.5.2"
   }
 }
