--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
-  "devDependencies": {
-    "@netlify/plugin-nextjs": "^1.0.5",
-    "netlify-plugin-cache-nextjs": "^1.5.2"
-  }
+  "devDependencies": {}
 }
