--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: master
+media_folder: public/images/upload
+public_folder: images/upload
 collections:
   - name: "songs" # Used in routes, e.g., /admin/collections/blog
     label: "Songs" # Used in the UI
