Updated to Material UI

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "gray-matter": "^4.0.2",
     "marked": "^1.2.7",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
-  },
-  "devDependencies": {}
+  }
 }
