--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "gray-matter": "^4.0.3",
     "marked": "^4.0.18",
-    "next": "11.1.4",
+    "next": "^12.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
