--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,3 +14,4 @@ collections:
       - { label: "Artist", name: "artist", widget: "string" }
       - { label: "Copyright", name: "copyright", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Tags", name: "tags", widget: "list" }
