--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "firebase": "^9.14.0",
     "gray-matter": "^4.0.3",
     "marked": "^4.0.18",
     "next": "^12.2.5",
